--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <!--  Header Caption -->
                 <h1 id="header-caption">Conmebol Copa America 2021</h1>
                 <div class="watch-live-button">
-                    <a class="watch-icon" target="_blank" href="">Watch Live</a>
+                    <a class="watch-icon" target="_blank" href="https://www.youtube.com/">Watch Live</a>
                     <a href="" class="watch-icon"><i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                 footballer who plays as a forward forthe
                 Brazil national team.</p>
 
-            <a class="button" target="_blank" href="https://www.foodpanda.com.bd/">Watch Now<i
+            <a class="button" target="_blank" href="https://www.youtube.com/">Watch Now<i
                     class="fas fa-arrow-right"></i></a>
 
 
