--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
                     <img src="images/players/player-4.png" alt="">
                     <div class="player-detail">
                         <h2 class="player-name"> Paulo Dybala</h2>
-                        <p class="player-info">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                            footballer who plays as a forward forthe
-                            Brazil national team. </p>
+                        <p class="player-info">Paulo Exequiel Dybala is an Argentine professional footballer who plays
+                            as a forward for Serie A club Juventus and the Argentina national teamPaulo . </p>
                     </div>
 
                 </div>
@@ -109,9 +108,8 @@
                     <img src="images/players/player-5.png" alt="">
                     <div class="player-detail">
                         <h2 class="player-name"> Mesut Ozil</h2>
-                        <p class="player-info">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                            footballer who plays as a forward forthe
-                            Brazil national team. </p>
+                        <p class="player-info">Mesut Özil is a German professional footballer who plays as an attacking
+                            midfielder for Süper Lig club Fenerbahçe.</p>
                     </div>
 
                 </div>
@@ -119,9 +117,8 @@
                     <img src="images/players/player-6.png" alt="">
                     <div class="player-detail">
                         <h2 class="player-name"> Mauro Icardi</h2>
-                        <p class="player-info">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                            footballer who plays as a forward forthe
-                            Brazil national team. </p>
+                        <p class="player-info">Mauro Emanuel Icardi is an Argentine professional footballer who plays as
+                            a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team. </p>
                     </div>
 
                 </div>
@@ -129,9 +126,8 @@
                     <img src="images/players/player-7.png" alt="">
                     <div class="player-detail">
                         <h2 class="player-name"> Di Maria</h2>
-                        <p class="player-info">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                            footballer who plays as a forward forthe
-                            Brazil national team. </p>
+                        <p class="player-info">Ángel Fabián Di María is an Argentine professional footballer who plays
+                            for Ligue 1 club Paris Saint-Germain and the Argentina national team. </p>
                     </div>
 
                 </div>
@@ -140,9 +136,8 @@
                     <img src="images/players/player-8.png" alt="">
                     <div class="player-detail">
                         <h2 class="player-name"> Kylian Mbappe</h2>
-                        <p class="player-info">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                            footballer who plays as a forward forthe
-                            Brazil national team. </p>
+                        <p class="player-info">Kylian Mbappé Lottin is a French professional footballer who plays as a
+                            forward for Ligue 1 club Paris Saint-Germain.</p>
                     </div>
 
                 </div>
@@ -151,9 +146,9 @@
                     <img src="images/players/player-9.png" alt="">
                     <div class="player-detail">
                         <h2 class="player-name"> Mohamed Salah</h2>
-                        <p class="player-info">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                            footballer who plays as a forward forthe
-                            Brazil national team. </p>
+                        <p class="player-info">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer
+                            who plays as a forward for Premier League club Liverpool and captains the Egypt national
+                            team. </p>
                     </div>
 
                 </div>
@@ -162,9 +157,8 @@
                     <img src="images/players/player-10.png" alt="">
                     <div class="player-detail">
                         <h2 class="player-name"> Harry Kane</h2>
-                        <p class="player-info">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                            footballer who plays as a forward forthe
-                            Brazil national team. </p>
+                        <p class="player-info">Harry Edward Kane MBE is an English professional footballer who plays as
+                            a striker for Premier League club Tottenham. </p>
                     </div>
 
                 </div>
@@ -173,9 +167,8 @@
                     <img src="images/players/player-11.png" alt="">
                     <div class="player-detail">
                         <h2 class="player-name"> Kevin De Bruyne</h2>
-                        <p class="player-info">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                            footballer who plays as a forward forthe
-                            Brazil national team. </p>
+                        <p class="player-info">Kevin De Bruyne is a Belgian professional footballer who plays as a
+                            midfielder for Premier League club Manchester City. </p>
                     </div>
 
                 </div>
@@ -184,9 +177,8 @@
                     <img src="images/players/player-12.png" alt="">
                     <div class="player-detail">
                         <h2 class="player-name"> Philippe Countinho</h2>
-                        <p class="player-info">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                            footballer who plays as a forward forthe
-                            Brazil national team. </p>
+                        <p class="player-info">Philippe Coutinho Correia is a Brazilian professional footballer who
+                            plays as an attacking midfielder or winger for the Brazil national team. </p>
                     </div>
 
                 </div>
@@ -198,11 +190,11 @@
     <section class="highlights">
         <div class=highlights-text>
             <h1>All highlights<br> Copa America 2021</h1>
-            <p class="highlights-paragraph">Neymar da Silva Santos Júnior ,aka Neymar Jr is a Brazilian
-                footballer who plays as a forward forthe
-                Brazil national team.</p>
+            <p class="highlights-paragraph">The 2021 Copa América was the 47th edition of the Copa América, the
+                international men's football championship organised by South America's football ruling body CONMEBOL.
+                The tournament took place in Brazil from 13 June to 10 July 2021.</p>
 
-            <a class="button" target="_blank" href="https://www.youtube.com/">Watch Now<i
+            <a class="button" target="_blank" href="https://www.youtube.com/watch?v=6tLxv5EsszA">Watch Now<i
                     class="fas fa-arrow-right"></i></a>
 
 
